# napi

./: .appveyor.yml  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  package.json  rustfmt.toml
crates/napi/: Cargo.toml
crates/napi-codegen/src/: lib.rs
crates/napi-sys/: Cargo.toml  build.rs
crates/napi/src/: env.rs  lib.rs  result.rs  types.rs
crates/napi/src/value/: any.rs  array.rs  boolean.rs  mod.rs  null.rs  number.rs  object.rs  string.rs  undefined.rs
example/: Cargo.toml  binding.gyp  example.js  package.json
example/src/: binding.c  lib.rs
napi/: Cargo.toml
napi-codegen/: Cargo.toml
napi-codegen/src/: lib.rs
napi-derive/: Cargo.toml
napi-derive/src/: lib.rs
napi-sys/: Cargo.toml
napi-sys/src/: bindings.rs  lib.rs
napi/src/: args.rs  env.rs  lib.rs  result.rs
napi/src/value/: any.rs  array.rs  array_buffer.rs  boolean.rs  buffer.rs  mod.rs  null.rs  number.rs  object.rs  string.rs  undefined.rs
scripts/: update-bindings.sh
