[package]
name = "napi-derive"
version = "0.1.1"
authors = ["Alexey Orlenko <eaglexrlnk@gmail.com>"]
license = "MIT"
description = "#[derive(NapiArgs)] for napi crate"
repository = "https://github.com/napi-rs/napi"
readme = "README.md"
keywords = ["node", "nodejs", "n-api", "addons", "bindings"]
categories = ["api-bindings", "development-tools::ffi"]

[badges]
travis-ci = { repository = "napi-rs/napi" }
appveyor = { repository = "aqrln/napi-rs" }
maintenance = { status = "experimental" }

[dependencies]
quote = "0.3.15"
syn = "0.11.11"

[lib]
proc-macro = true
