[package]
name = "napi-sys"
version = "0.1.0"
authors = ["Alexey Orlenko <eaglexrlnk@gmail.com>"]
license = "MIT"
description = "Low-level bindings to Node.js N-API"
repository = "https://github.com/aqrln/napi-rs"
readme = "README.md"
keywords = ["node", "nodejs", "n-api", "addons", "bindings"]
categories = ["external-ffi-bindings"]

[badges]
travis-ci = { repository = "aqrln/napi-rs" }
appveyor = { repository = "aqrln/napi-rs" }
maintenance = { status = "experimental" }

[dependencies]
