[package]
name = "napi"
version = "0.1.1"
authors = [
  "Alexey Orlenko <eaglexrlnk@gmail.com>",
  "Dmytro Nechai <nechaido@gmail.com>",
]
license = "MIT"
description = "High-level bindings to Node.js N-API"
repository = "https://github.com/napi-rs/napi"
readme = "README.md"
keywords = ["node", "nodejs", "n-api", "addons", "bindings"]
categories = ["api-bindings"]

[badges]
travis-ci = { repository = "napi-rs/napi" }
appveyor = { repository = "aqrln/napi-rs" }
maintenance = { status = "experimental" }

[dependencies]
napi-sys = "0.1.1"
